@@ -2,7 +2,8 @@ package cz.rict.carcassonne.classic.base.launcher;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.List;
 import cz.rict.carcassonne.classic.base.launcher.dependency.DependencyUpdater;
 import cz.rict.carcassonne.classic.base.util.Utils;
@@ -37,7 +38,13 @@ public final class Launcher
         }
 
         final List<String> modulePath = DependencyUpdater.checkDependencies(DependencyUpdater.DEP_FILE_PATH);
-        modulePath.add(Paths.get(Launcher.class.getProtectionDomain().getCodeSource().getLocation().toURI()).toAbsolutePath().normalize().toString());
+        Files.list(Path.of("mods")).forEach(jarFilePath -> {
+            if (jarFilePath.toString().contains(".jar")) // TODO: ioutils create is path jar file
+            {
+                modulePath.addAll(DependencyUpdater.checkDependencies(jarFilePath, DependencyUpdater.DEP_FILE_PATH));
+            }
+        });
+        modulePath.add(Path.of(Launcher.class.getProtectionDomain().getCodeSource().getLocation().toURI()).toAbsolutePath().normalize().toString());
 
         new ProcessBuilder(System.getProperty("java.home") + "/bin/java", "--module-path", String.join(";", modulePath), "--module", MODULE_MAIN_CLASS)
             .inheritIO()
